# myLangtonsAnt

./: CMakeLists.txt  main.cpp
